--- a/voxels/Cargo.toml
+++ b/voxels/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 bevy = "0.12.0"
 bevy_screen_diagnostics = "0.4.0"
 rand = "0.8.0"
+bevy_spectator = "0.4"
+bevy_atmosphere = "0.8.1"
