--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ bevy_screen_diagnostics = "0.4.0"
 rand = "0.8.0"
 bevy_spectator = "0.4"
 bevy_atmosphere = "0.8.1"
+bevy_debug_grid = "0.3"
+
 
 [profile.dev.package."*"]
 opt-level = 3
