--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,11 @@ name = "voxels"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
-bevy = "0.12.0"
+bevy = {version = "0.12", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "x11", "tonemapping_luts", "ktx2", "zstd"]}
 bevy_screen_diagnostics = "0.4.0"
 rand = "0.8.0"
 bevy_spectator = "0.4"
@@ -12,6 +15,18 @@ bevy_atmosphere = "0.8.1"
 bevy_debug_grid = "0.4"
 noise = "0.8.2"
 
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3.1"
+bevy_egui = "0.23.0"
+renet_visualizer = { version = "0.0.7", features = ["bevy"] }
+smooth-bevy-cameras = "0.10"
+fastrand = "2.0.0"
 
-[profile.dev.package."*"]
-opt-level = 3
+bevy_renet = { version = "0.0.10", features = ["serde"]}
+
+[[bin]]
+name = "server"
+path = "src/bin/server.rs"
+
+[features]
+transport = ["bevy_renet/transport"]
