--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,13 @@
 name = "voxels"
 version = "0.1.0"
 edition = "2021"
+default-run = "voxels"
 
 [profile.dev.package."*"]
 opt-level = 3
 
 [dependencies]
-bevy = {version = "0.12", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "x11", "tonemapping_luts", "ktx2", "zstd"]}
+bevy = "0.12"
 bevy_screen_diagnostics = "0.4.0"
 rand = "0.8.0"
 bevy_spectator = "0.4"
@@ -28,5 +29,5 @@ bevy_renet = { version = "0.0.10", features = ["serde"]}
 name = "server"
 path = "src/bin/server.rs"
 
-[features]
-transport = ["bevy_renet/transport"]
+[package.metadata.scripts]
+both = "cargo run --bin server & cargo run --bin client"
