--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ opt-level = 3
 bevy = "0.12.1"
 bevy_screen_diagnostics = "0.4.0"
 rand = "0.8.0"
+rapier3d = { version = "0.17.2", features = [ "simd-stable" ] }
 bevy_spectator = "0.4"
 bevy_atmosphere = "0.8.1"
 bevy_debug_grid = "0.4"
