--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: clippy
       run: cargo clippy
-    - name: build
-      run: cargo build --verbose
-    - name: run tests
-      run: cargo test --verbose
+    # - name: build
+    #   run: cargo build --verbose
+    # - name: run tests
+    #   run: cargo test --verbose
